[gd_scene load_steps=9 format=3 uid="uid://qgjvpb3v2kd4"]

[ext_resource type="Script" path="res://Scripts/central_explosion.gd" id="1_bkhx2"]
[ext_resource type="Texture2D" uid="uid://bv3od7dxw6lut" path="res://Assets/Sprites.png" id="1_p42lb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bkhx2"]
atlas = ExtResource("1_p42lb")
region = Rect2(32, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_in8p3"]
atlas = ExtResource("1_p42lb")
region = Rect2(112, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd0fq"]
atlas = ExtResource("1_p42lb")
region = Rect2(32, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_42ec7"]
atlas = ExtResource("1_p42lb")
region = Rect2(112, 176, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6q18y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkhx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in8p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd0fq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42ec7")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqtbe"]
size = Vector2(16, 16)

[node name="CentralExplosion" type="Area2D"]
collision_layer = 16
collision_mask = 37
script = ExtResource("1_bkhx2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6q18y")
autoplay = "default"
frame_progress = 0.518598

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_aqtbe")

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCastUp" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, -16)
collision_mask = 6
collide_with_areas = true

[node name="RayCastRight" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(16, 0)
collision_mask = 6
collide_with_areas = true

[node name="RayCastDown" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, 16)
collision_mask = 6
collide_with_areas = true

[node name="RayCastLeft" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(-16, 0)
collision_mask = 6
collide_with_areas = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
